go back to using the 2-argument version of URL